[gd_scene load_steps=10 format=3 uid="uid://cwkx4xqfoj1tr"]

[ext_resource type="Script" path="res://Scripts/window_obs.gd" id="1_8r6so"]
[ext_resource type="Texture2D" uid="uid://2s22ynv5nbq8" path="res://Assets/Images/Obstacles/window/window_closed.png" id="2_gv51a"]
[ext_resource type="Texture2D" uid="uid://ctfagxwgry61k" path="res://Assets/Images/Obstacles/window/window_open.png" id="3_d5v4b"]
[ext_resource type="Texture2D" uid="uid://5ui7tqaqo8e5" path="res://Assets/Images/Obstacles/window/weewoo.png" id="5_0iwuh"]
[ext_resource type="Texture2D" uid="uid://dx53nhj25saw6" path="res://Assets/Images/Obstacles/window/termometer/hot_temp.png" id="5_5jlmx"]
[ext_resource type="Texture2D" uid="uid://bkm23cdthj0bk" path="res://Assets/Images/Obstacles/window/termometer/normal_temp.png" id="6_d046c"]
[ext_resource type="Texture2D" uid="uid://b60vejcyatyme" path="res://Assets/Images/Obstacles/window/termometer/warm_temp.png" id="7_gqn2v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dls04"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gv51a")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d5v4b")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rdgpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_5jlmx")
}],
"loop": true,
"name": &"hot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_d046c")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_gqn2v")
}],
"loop": true,
"name": &"warm",
"speed": 5.0
}]

[node name="Window" type="Node2D"]
script = ExtResource("1_8r6so")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_dls04")
animation = &"open"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(1633, 291)
polygon = PackedVector2Array(-48, -75.75, -42, 310, 185, 315, 183, -188)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Weewoo" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 540)
texture = ExtResource("5_0iwuh")

[node name="Termometer" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_rdgpx")
animation = &"normal"

[node name="temp_timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="temp_timer" to="." method="_on_temp_timer_timeout"]
